# store

./: .pnp.cjs  package.json  tsconfig.json
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
src/: App.vue  global.d.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  manager.rs
src/components/: discover_package.vue  install_package.vue  package.vue
src/pages/: discover.vue  installs.vue  popular.vue  search_result.vue  settings.vue
src/styles/: main.scss
