[package]
name = "store"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.3", features = [] }

[dependencies]
serde_json = "1.0"
window-vibrancy = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.3", features = ["macos-private-api", "shell-open", "window-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size

[profile.dev]
incremental = true
strip = false
lto = false
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
incremental = true
codegen-units = 4

[profile.dev.build-override]
opt-level = 0
incremental = true
codegen-units = 4
